Gemfile tidy ups

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -15,10 +15,8 @@ group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
 
-  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-  gem 'therubyrhino'
-
   gem 'uglifier', '>= 1.0.3'
+  gem 'therubyrhino'
 
   gem 'less-rails'
 end
@@ -48,7 +46,7 @@ gem 'warbler'
 # To use debugger
 # gem 'debugger'
 
-gem 'atomic'
+gem 'atomic', '= 1.0.1'
 
 # Importing requirements
 
