--- a/public/Gemfile
+++ b/public/Gemfile
@@ -6,18 +6,16 @@ group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
 
-  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-  gem 'therubyrhino'
-
   gem 'uglifier', '>= 1.0.3'
+  gem 'therubyrhino'
 
   gem 'less-rails'
 end
 
 gem 'jquery-rails'
 
-gem 'json-schema', '1.0.10'
+gem 'json-schema'
 
 gem "jruby-jars", "= 1.7.3"
 
-gem 'atomic'
+gem 'atomic', '= 1.0.1'
