--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,6 +1,6 @@
 source "http://rubygems.org"
 
-gem "atomic"
+gem "atomic", '= 1.0.1'
 gem "sinatra", :require => false
 gem "sinatra-reloader", :require => false
 gem "sequel"
