--- a/migrations/Gemfile
+++ b/migrations/Gemfile
@@ -3,3 +3,8 @@ source "http://rubygems.org"
 gem "nokogiri", ">=1.5.9"
 gem "factory_girl"
 gem "rufus-lru"
+
+
+group :development do
+  gem 'mocha'
+end
