--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
-# TODO: Testing with multiple database backends. By default,
-# ArchivesSpace will run these tests against the embedded Derby database
-# (see config/config-distribution.rb). To investigate this see 
-# http://about.travis-ci.org/docs/user/database-setup/
-
 language: ruby
 
 rvm:
@@ -15,6 +10,10 @@ jdk:
   - openjdk6
 
 env:
+  # These two sets of environment variables determine which database the
+  # tests will run against. The build script should honor any ArchivesSpace
+  # options set in JAVA_OPTS, so we don't need an additional configuration
+  # file for now. 
   - DB=derby INTEGRATION_LOGFILE=/var/tmp/aspace-integration.log
   - DB=mysql INTEGRATION_LOGFILE=/var/tmp/aspace-integration.log JAVA_OPTS="-Daspace.config.db_url=jdbc:mysql://localhost:3306/archivesspace?useUnicode=true&characterEncoding=UTF-8&user=root"
 
