--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -18,7 +18,7 @@ group :assets do
   gem 'uglifier', '>= 1.0.3'
   gem 'therubyrhino'
 
-  gem 'less-rails'
+  gem 'less-rails', '~> 2.3.3'
 end
 
 gem 'jquery-rails'
