--- a/frontend/config/help.yml
+++ b/frontend/config/help.yml
@@ -1,8 +1,9 @@
 enabled: true
-base_url: "http://aspace.hudmol.com/help/Default_CSH.htm"
+base_url: "http://docs.archivesspace.org/Default_CSH.htm"
 topic_prefix: "#"
 topics:
-  accession: 101
+  # Accession Topics (100-)
+  accession: 100
   accession_basic_information: 101
   accession_extents: 102
   accession_dates: 103
@@ -12,3 +13,98 @@ topics:
   accession_external_documents: 107
   accession_rights_statements: 108
   accession_deaccessions: 109
+  accession_instances: 110
+  accession_collection_management: 111
+  accession_classification: 112
+  accession_user_defined: 113
+  # Resource Topics (200-)
+  resource: 200
+  resource_basic_information: 201
+  resource_dates: 202
+  resource_extents: 203
+  resource_finding_aid: 204
+  resource_related_accessions: 205
+  resource_linked_agents: 205
+  resource_subjects: 206
+  resource_notes: 207
+  resource_external_documents: 208
+  resource_rights_statements: 209
+  resource_instances: 210
+  resource_deaccessions: 211
+  resource_collection_management: 212
+  resource_classification: 213
+  resource_user_defined: 214
+  # Digital Object Topics (300-)
+  digital_object: 300
+  digital_object_basic_information: 301
+  digital_object_file_versions: 302
+  digital_object_dates: 303
+  digital_object_extents: 304
+  digital_object_linked_agents: 305
+  digital_object_subjects: 306
+  digital_object_notes: 307
+  digital_object_external_documents: 308
+  digital_object_rights_statements: 309
+  digital_object_collection_management: 310
+  digital_object_user_defined: 311
+  # Subjects (400-)
+  subject: 400
+  subject_basic_information: 401
+  subject_terms: 402
+  subject_external_documents: 403
+  # Agent Persons (500-)
+  agent_person: 500
+  agent_person_dates_of_existence: 501
+  agent_person_names: 502
+  agent_person_contact_details: 503
+  agent_person_notes: 504
+  agent_person_related_agents: 505
+  agent_person_external_documents: 506
+  # Agent Family (507-)
+  agent_family: 507
+  agent_family_dates_of_existence: 508
+  agent_family_names: 509
+  agent_family_contact_details: 510
+  agent_family_notes: 511
+  agent_family_related_agents: 512
+  agent_family_external_documents: 513
+  # Agent Corporate Entity (514-)
+  agent_corporate_entity: 514
+  agent_corporate_entity_dates_of_existence: 515
+  agent_corporate_entity_names: 516
+  agent_corporate_entity_contact_details: 517
+  agent_corporate_entity_notes: 518
+  agent_corporate_entity_related_agents: 519
+  agent_corporate_entity_external_documents: 520
+  # Agent Software (521-)
+  agent_software: 521
+  agent_software_dates_of_existence: 522
+  agent_software_names: 523
+  agent_software_contact_details: 524
+  agent_software_notes: 525
+  agent_software_related_agents: 526
+  agent_software_external_documents: 527
+  # Location (601)
+  location: 601
+  # Event (602-)
+  event: 602
+  event_basic_information: 603
+  event_date: 604
+  event_linked_agents: 605
+  event_linked_records: 606
+  # Classification (607)
+  classification: 607
+  # Import (700)
+  import: 700
+  # Search (701)
+  search: 701
+  # Manage Groups (800)
+  repository_groups: 800
+  # Managing User Access (801)
+  repository_users: 801
+  # Repositories (900)
+  repository: 900
+  # Manage Users (901)
+  user: 901
+  # Controlled Value Lists (902)
+  enumeration: 902
