Streamline build and Travis config
* Create new Travis-specific targets in the Ant build file:
`travis`, `travis:checkdb`, `travis:db:nuke`, and `travis:test`
	* Note: `travis:test` now runs **all** tests
* Ensure `db:nuke` gets run before each Selenium suite on MySQL
* Don't fetch Firefox or NodeJS by default
* Also, fix broken streaming spec

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,13 +31,7 @@ branches:
     - gh-pages
 
 script:
-  - build/run bootstrap
-  - build/run db:migrate
-  - build/run backend:test
-  - build/run backend:integration
-# - build/run common:test  # https://github.com/hudmol/archivesspace/commit/193fe9a3990da74e37e98140c9eaa264ec801643#L0R106
-  - SCREENSHOT_ON_ERROR=1 build/run selenium:test
-  - WITH_NODEJS=1 build/run dist
+  - SCREENSHOT_ON_ERROR=1 build/run travis
 
 after_failure:
   - build/run dump-file -Ddump.file=/var/tmp/aspace-integration.log
