Add version to built ZIP file name

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ config/config.rb
 coverage
 selenium/webdriver-profile*
 /archivesspace.jar
-/archivesspace.zip
+/archivesspace*.zip
 build/target
 build/solr
 build/solr_index
