Windows-related fixes (batch and backend Gemfile)
* Quote GEM_HOME in batch file to address issues with spaces
* Add jruby-openssl to backend Gemfile

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -13,6 +13,7 @@ gem "rspec"
 gem "json-schema"
 gem "simplecov"
 gem "jruby-jars", "= 1.7.4"
+gem "jruby-openssl"
 gem "warbler"
 gem "nokogiri"
 gem "factory_girl"
