Better handling for arrays of parameters in the backend, and support for multi-file uploads.

--- a/migrations/Gemfile
+++ b/migrations/Gemfile
@@ -4,6 +4,7 @@ gem "nokogiri", ">=1.5.9"
 gem "factory_girl"
 gem "rufus-lru"
 gem "net-http-persistent"
+gem "multipart-post"
 
 group :development do
   gem 'mocha'
