Ignore build/shared

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ build/indexer_state
 build/archivesspace_demo_db
 build/*.tmp
 build/.gem
+build/shared
 backend/tests/ladle-server*
 /migrations/examples/csv/accessions-sample.csv
 webdriver-profile*
