Reintroduce Nokogiri for the sake of plugins that use it

--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -65,3 +65,7 @@ gem "multipart-post"
 
 gem "rubyzip", "1.0.0"
 gem "zip-zip"
+
+# The frontend doesn't specifically depend on Nokogiri at the moment, but
+# several plugins use it.
+gem "nokogiri"
