--- a/public/Gemfile
+++ b/public/Gemfile
@@ -28,3 +28,15 @@ group :development, :test do
   gem 'rspec-rails'
   gem 'factory_girl'
 end
+
+
+# Allow plugins to provide their own Gemfiles too.
+#
+require 'asutils'
+ASUtils.find_local_directories('public').each do |plugin|
+  gemfile = File.join(plugin, 'Gemfile')
+
+  if File.exists?(gemfile)
+    instance_eval(File.read(gemfile))
+  end
+end
