--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -40,10 +40,4 @@ gem "zip-zip"
 # Allow plugins to provide their own Gemfiles too.
 #
 require 'asutils'
-ASUtils.find_local_directories('backend').each do |plugin|
-  gemfile = File.join(plugin, 'Gemfile')
-
-  if File.exists?(gemfile)
-    instance_eval(File.read(gemfile))
-  end
-end
+ASUtils.load_plugin_gems(self)
