--- a/frontend/Gemfile
+++ b/frontend/Gemfile
@@ -74,10 +74,4 @@ gem "nokogiri"
 # Allow plugins to provide their own Gemfiles too.
 #
 require 'asutils'
-ASUtils.find_local_directories('frontend').each do |plugin|
-  gemfile = File.join(plugin, 'Gemfile')
-
-  if File.exists?(gemfile)
-    instance_eval(File.read(gemfile))
-  end
-end
+ASUtils.load_plugin_gems(self)
