add saxerator dependency

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -15,6 +15,7 @@ gem "simplecov"
 gem "jruby-jars", "= 1.7.6"
 gem "warbler"
 gem "nokogiri"
+gem "saxerator"
 gem "factory_girl"
 gem "rufus-scheduler"
 gem "rufus-lru"
