Updates to selenium and travis
Bump selenium for Firefox 28 support.
Add wait in User Preferences test to reduce failure.
Split out travis tasks further for faster build time per job.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
   - DB=derby TASK=travis:test
   - DB=mysql TASK=travis:selenium
   - DB=derby TASK=travis:selenium
+  - DB=mysql TASK=travis:selenium:public
+  - DB=derby TASK=travis:selenium:public
   - TASK=dist
 
 before_script:
